--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Super-Linter
-        uses: github/super-linter@v3
+        uses: super-linter/slim@v6
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
